apps/actual-budget/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: actual-budget
  labels:
    app: actual-budget
    app.kubernetes.io/instance: actual-budget-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: actual-budget
    app.kubernetes.io/part-of: actual-budget
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: actual-budget
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: actual-budget
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: actual-budget
    protocol: TCP
    port: 80
    targetPort: 5006
  internalTrafficPolicy: Cluster
