apps/actual-budget/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`actual-budget.elposhox.dev`)
    services:
    - kind: Service
      name: actual-budget
      port: 80
